<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dawdler</groupId>
	<artifactId>dawdler</artifactId>
	<version>0.17.1-jdk17-RELEASES</version>
	<name>dawdler</name>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dawdler.build.version>0.17.1-jdk17-RELEASES</dawdler.build.version>
		<slf4j.version>2.0.6</slf4j.version>
		<ch.qos.logback.version>1.4.8</ch.qos.logback.version>
		<org.ow2.asm.version>9.2</org.ow2.asm.version>
		<commons-pool2.version>2.10.0</commons-pool2.version>
		<kryo.version>4.0.2</kryo.version>
		<org.apache.curator.version>5.4.0</org.apache.curator.version>
		<zookeeper.version>3.8.0</zookeeper.version>
		<cglib.version>3.3.0</cglib.version>
		<jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
		<jackson-core.version>2.15.2</jackson-core.version>
		<jackson-databind.version>2.15.2</jackson-databind.version>
		<velocity.version>2.3</velocity.version>
		<jedis.version>4.3.1</jedis.version>
		<rabbitmq.version>5.14.0</rabbitmq.version>
		<caffeine.version>3.0.5</caffeine.version>
		<jsoup.version>1.16.1</jsoup.version>
		<aspectj.version>1.9.19</aspectj.version>
		<javassist.version>3.28.0-GA</javassist.version>
		<commons-jexl3.version>3.2</commons-jexl3.version>
		<commons-io.version>2.11.0</commons-io.version>
		<jackson-dataformat-yaml.version>2.15.2</jackson-dataformat-yaml.version>
		<snakeyaml.version>2.0</snakeyaml.version>
		<consul-api.version>1.4.5</consul-api.version>
		<httpclient.version>4.5.14</httpclient.version>
		<elasticsearch.version>8.2.1</elasticsearch.version>
		<pinpoint.version>2.5.2</pinpoint.version>
		<qdox.version>2.0.3</qdox.version>
		<quartz.version>2.3.2</quartz.version>
		<gson.version>2.10.1</gson.version>
		<portlet-api.version>3.0.1</portlet-api.version>
		<mybatis.version>3.5.13</mybatis.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-access</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-access</artifactId>
				<version>${ch.qos.logback.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${ch.qos.logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm</artifactId>
				<version>${org.ow2.asm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-tree</artifactId>
				<version>${org.ow2.asm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-pool2</artifactId>
				<version>${commons-pool2.version}</version>
			</dependency>
			<dependency>
				<groupId>com.esotericsoftware</groupId>
				<artifactId>kryo</artifactId>
				<version>${kryo.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-client</artifactId>
				<version>${org.apache.curator.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-framework</artifactId>
				<version>${org.apache.curator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-recipes</artifactId>
				<version>${org.apache.curator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper.version}</version>
				<exclusions>
					<exclusion>
						<groupId>io.netty</groupId>
						<artifactId>*</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper-jute</artifactId>
				<version>${zookeeper.version}</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>${cglib.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>${jakarta.servlet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson-core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson-core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson-databind.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity-engine-core</artifactId>
				<version>${velocity.version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>${jedis.version}</version>
			</dependency>
			<dependency>
				<groupId>com.rabbitmq</groupId>
				<artifactId>amqp-client</artifactId>
				<version>${rabbitmq.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>${caffeine.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>${jsoup.version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-validator</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-db</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-mybatis</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-dao</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-util</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-load-bean</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-velocity</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-serialization</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-jedis-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-jedis</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-jedis</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-rabbitmq-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-rabbitmq</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-rabbitmq</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-es-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-es</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-es</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-schedule-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-schedule</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-schedule</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-distributed-transaction-api</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-distributed-transaction-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-distributed-transaction-compensator</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-jakarta-fileupload</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-discovery-center-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-discovery-center-zookeeper</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-discovery-center-zookeeper-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-discovery-center-zookeeper</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-discovery-center-zookeeper</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-discovery-center-consul-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-yaml</artifactId>
				<version>${jackson-dataformat-yaml.version}</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-jexl3</artifactId>
				<version>${commons-jexl3.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ecwid.consul</groupId>
				<artifactId>consul-api</artifactId>
				<version>${consul-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-config-center-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-config-center-consul-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-client-plug-config-center-consul</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-server-plug-config-center-consul</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-cache-core</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-cache-caffeine</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-cache-jedis</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>dawdler</groupId>
				<artifactId>dawdler-circuit-breaker</artifactId>
				<version>${dawdler.build.version}</version>
			</dependency>
			<dependency>
				<groupId>co.elastic.clients</groupId>
				<artifactId>elasticsearch-java</artifactId>
				<version>${elasticsearch.version}</version>
			</dependency>
			<dependency>
				<groupId>com.navercorp.pinpoint</groupId>
				<artifactId>pinpoint-bootstrap-core</artifactId>
				<version>${pinpoint.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.thoughtworks.qdox</groupId>
				<artifactId>qdox</artifactId>
				<version>${qdox.version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartz.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.portlet</groupId>
				<artifactId>portlet-api</artifactId>
				<version>${portlet-api.version}</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>17</source>
					<target>17</target>
					<!--debug>true</debug>-->
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.client.plug</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<plugin>
				<!-- -N versions:update-child-modules -->
				<!--mvn versions:set -DnewVersion=0.0.3-RELEASES-->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<!--		<plugin>
				<groupId>org.owasp</groupId>
			<artifactId>dependency-check-maven</artifactId>
			<version>8.1.2</version>
				<executions>
					<execution>
						<goals>
			<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Built-By>dawdler</Built-By>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
		<defaultGoal>compile</defaultGoal>
	</build>
	<modules>
		<module>dawdler-util</module>
		<module>dawdler-serialization</module>
		<module>dawdler-core</module>
		<module>dawdler-client</module>
		<module>dawdler-server</module>
		<module>dawdler-client-plug-validator</module>
		<module>dawdler-client-plug</module>
		<module>dawdler-client-plug-session</module>
		<module>dawdler-server-plug</module>
		<module>dawdler-server-plug-db</module>
		<module>dawdler-server-plug-dao</module>
		<module>dawdler-server-plug-mybatis</module>
		<module>dawdler-circuit-breaker</module>
		<module>dawdler-load-bean</module>
		<module>dawdler-client-plug-velocity</module>
		<module>dawdler-config-center</module>
		<module>dawdler-redis-plug</module>
		<module>dawdler-rabbitmq-plug</module>
		<module>dawdler-distributed-transaction</module>
		<module>dawdler-es-plug</module>
		<module>dawdler-pinpoint-plug</module>
		<module>dawdler-jakarta-fileupload</module>
		<module>dawdler-client-api-generator</module>
		<module>dawdler-encrypt-generator</module>
		<module>dawdler-schedule-plug</module>
		<module>dawdler-discovery-center</module>
		<module>dawdler-dependencies</module>
		<module>dawdler-cache-plug</module>
	</modules>
</project>